Fixed Hero Spacing

--- a/styles/request-for-starterkit.css
+++ b/styles/request-for-starterkit.css
@@ -156,11 +156,11 @@
 
 @media (min-width: 992px) {
     .hpp-dtc-m-hero .content {
-        margin-bottom: 3.3rem;
+        margin-bottom: 30px;
     }
 
     .hpp-dtc-m-hero.internal-hero .content .pre-title {
-        margin-top: 3rem;
+        margin-top: 30px;
     }
 }
 
